--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -18,10 +18,17 @@ section{
   justify-content: space-between;
   margin-bottom: 40px;
   padding: 10px 40px;
-  >h1{
+  .top-logo{
+    @include remb(42px);
     @include b_box;
     font-weight: normal;
     color: white;
+    text-decoration: none;
+    transition: 0.3s;
+    &:hover{
+      transition: 0.3s;
+      opacity: 0.7;
+    }
   }
   &-btns{
     @include fb;
@@ -33,7 +40,18 @@ section{
     @include remb(24px);
     color: white;
     text-decoration: none;
+    transition: 0.3s;
+    &:hover{
+      transition: 0.3s;
+      opacity: 0.7;
+    }
   }
+}
+
+.footer-bar{
+  color: white;
+  background-color: $cyan;
+  padding: 10px 40px;
 }
 
 .box{
@@ -51,6 +69,9 @@ section{
   p{
     @include rem(18px);
     margin-bottom: 20px;
+  }
+  strong{
+    color: $cyan;
   }
 }
 
